--- a/poolboy.service
+++ b/poolboy.service
@@ -6,7 +6,7 @@ After=network.target
 User=root
 WorkingDirectory=/opt/Poolboy
 Environment=FLASK_APP=server.py
-ExecStart=flask run --host=0.0.0.0
+ExecStart=flask run --host=0.0.0.0 --port=80
 Restart=always
 RestartSec=10
 
